--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -37,6 +37,11 @@ button {
   color: white;
 }
 
+.login button:disabled {
+  background-color: #d9e7e2;
+  cursor: not-allowed;
+}
+
 .login .logininfo {
   text-align: center;
 }
